package com.example.wherenow.util.testutil

object TestTag {
    const val BACK_ICON_TAG = "backIconTag"
    const val BLANK_NOTE_TITLE_TAG = "blankNoteTitleTag"
    const val BLANK_NOTE_DESCRIPTION_TAG = "blankNoteDescriptionTag"
    const val BUTTON_TAG = "buttonTag"
    const val CHECKBOX_TAG = "Checkbox_"
    const val DATA_PICKER_TAG = "dataPickerTag"
    const val DELETE_FILE = "deleteFile"
    const val DELETE_TILE = "deleteTile"
    const val DETAILS_TILE = "detailsTile"
    const val FILE_ITEM = "fileItem"
    const val FLIGHT_TILE_TAG = "flightTileTag"
    const val FLOATING_ACTION_BUTTON_TAG = "floatingActionButtonTag"
    const val LOTTIE_ANIMATION_TAG = "lottieAnimationTag"
    const val MENU_TAG = "menuTag"
    const val NOTES_TILE_TAG = "notesTileTag"
    const val NOTES_TILE_DELETE_TAG = "notesTileDeleteTag"
    const val SEARCH_BAR_TAG = "searchBarTag"
    const val SEARCH_TEXT_FIELD_TAG = "searchTextFieldTag"
}
