...
import com.example.wherenow.ui.theme.whereNowSpacing
import com.example.wherenow.util.StringUtils

val LOTTIE_HEIGHT = 150.dp
val TONAL_ELEVATION_DP = 72.dp
const val CITY_MODAL_MAX_HEIGHT = 0.93f
const val FIRST_DROPDOWN = "firstDropdown"
const val SECOND_DROPDOWN = "secondDropdown"

@Composable
internal fun TripDataDetailsAreaScreen(
    modifier: Modifier,
    state: TripDataDetailsViewState,
    uiIntent: (TripDataDetailsUiIntent) -> Unit
...
        departureCity = "New York",
        arrivalCity = "Los Angeles",
        arrivalCodeAirport = "JFK",
        departureCodeAirport = "LAX",
        arrivalAirport = "Los Angeles International Airport",
        departureAirport = "John F. Kennedy International Airport",
        arrivalCountry = "United States",
        departureCountry = "United States",
        distance = "2475"
    )
    WhereNowTheme {
        TripDataDetailsAreaScreen(
            modifier = Modifier,
...
                showBottomSheetFromCityList = true,
                cityList = listOf(
                    AttributesDto(
                        attributes = DataItemDto(
                            city = "Miami",
                            country = "United States",
                            iata = "MIA",
                            icao = "KMIA",
                            name = "Miami International Airport"
                        ),
                        id = "1",
                        type = "1"
                    ),
                    AttributesDto(
                        attributes = DataItemDto(
...
